--- a/css/navigation.css
+++ b/css/navigation.css
@@ -28,7 +28,8 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80px;
+  text-decoration: none;
+  width: 100%;
 }
 
 .nav-icon {
@@ -37,10 +38,13 @@ nav {
   margin-bottom: 0.5rem;
   transition: transform 0.3s ease;
   filter: brightness(0);
+  display: block;
 }
 
 .nav-text {
   font-size: 14px;
   text-align: center;
   width: 100%;
+  display: block;
+  color: black;
 }
